# whatisthis

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
Data/: Download.py
Experiments/: simple_model_train.py
src/ETL/: Extract.py  Load.py  __init__.py
src/Train/: train.py
src/app/: main.py  routes.py
src/app/static/: style.css
src/app/templates/: index.html
src/models/: SimpleCNN.py  __init__.py  mobilenet_v2.py
src/utils/: __init__.py  labels.py  preprocessing.py
