[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whatisthis"
version = "0.1.0"
description = "My Experiments with Vison models"
authors = [
    { name="Shyam Sunder" }
]

dependencies = [
    "flask>=3.1.2",
    "matplotlib>=3.10.7",
    "numpy",
    "Pillow>=9.3.0",
    "requests>=2.32.5",
    "torch",
]

# [tool.uv.sources]
#torch=[
#	{ index = "pytorch-cpu" }
#]

#[[tool.uv.index]]
#name = "pytorch-cpu"
#url = "https://download.pytorch.org/whl/cpu"
#explicit = true 

#[tool.setuptools.packages.find]
#where = ["."]
#include = ["models*", "utils*"]
